@@ -11,61 +11,67 @@
 # 
 # Supported drivers are mysql, pgsql, sqlite.
 #
-driver		=
+driver               =
 
 # 
 # Supported drivers are sql, ldap.
 #
-authdriver	=
+authdriver           =
 
 # 
 # Host for database, set to localhost if database is on
 # the same host as dbmail and you want to use a local
 # socket for connecting. 
 #
-host		=               
+host                 =               
 
 # 
 # If you want to use TCP/IP for connecting to the database,
 # and have the database running on a non-standard port. 
 #
-sqlport		=                
+sqlport              =                
 
 # 
 # When using a local socket connection to the database, fill
 # in the path to the socket here (e.g. /var/run/mysql.sock).
 #
-sqlsocket	=              
+sqlsocket            =              
 
 # 
 # Database username.
 #
-user		= dbmail             
+user                 = dbmail             
 
 # 
 # Database password.
 #
-pass		=                   
+pass                 =                   
 
 # 
 # Database name.
 #
-db		= dbmail               
+db                   = dbmail               
 
 # 
 # Table prefix. Defaults to "dbmail_" if not specified.
 #
-table_prefix	= dbmail_   
+table_prefix         = dbmail_   
 
 # 
-# MySQL connection encoding must match to table encoding.
+# encoding must match the database/table encoding.
 #
-#encoding	= latin1        
+encoding             = utf8
+
+#
+# messages with unknown encoding will be assumed to have 
+# default_msg_encoding
+#
+default_msg_encoding = utf8
 
 # 
 # Postmaster's email address for use in bounce messages.
 #
-#postmaster	= DBMAIL-MAILER       
+#postmaster           = DBMAIL-MAILER       
 
 # 
 # Sendmail executable for forwards, replies, notifies, vacations.
@@ -73,7 +79,7 @@ table_prefix	= dbmail_
 # dos2unix|/usr/sbin/sendmail  works well with Qmail.
 # You may use quotes (") for executables with unusual names.
 #
-sendmail	= /usr/sbin/sendmail     
+sendmail              = /usr/sbin/sendmail     
 
 #
 #
@@ -84,19 +90,19 @@ sendmail	= /usr/sbin/sendmail
 # 
 # Trace level to send to syslog. Default is 2 (messages, errors, fatals).
 #
-TRACE_SYSLOG	= 5          
+TRACE_SYSLOG          = 3
 
 # 
 # Trace level to send to stderr. Default is 0 (fatals).
 #
-TRACE_STDERR	= 2          
+TRACE_STDERR          = 1          
 
 # 
 # Root privs are used to open a port, then privs
 # are dropped down to the user/group specified here.
 #
-EFFECTIVE_USER	= nobody   
-EFFECTIVE_GROUP	= nogroup 
+EFFECTIVE_USER        = nobody   
+EFFECTIVE_GROUP       = nogroup 
 
 # 
 # The IP addresses the services will bind to.
@@ -104,67 +110,67 @@ EFFECTIVE_GROUP	= nogroup
 # Use 127.0.0.1 for localhost only.
 # Separate multiple entries with spaces ( ) or commas (,).
 #
-BINDIP		= *               
+BINDIP                = *               
 
 # 
 # Default number of child processes to start.
 #
-NCHILDREN	= 2             
+NCHILDREN             = 2             
 
 # 
 # Maximum number of child processes allowed.
 #
-MAXCHILDREN	= 10          
+MAXCHILDREN           = 10          
 
 # 
 # Unused children to always have availale.
 #
-MINSPARECHILDREN	= 2      
+MINSPARECHILDREN      = 2      
 
 # 
 # Maximum unused children allowed to be active.
 #
-MAXSPARECHILDREN	= 4      
+MAXSPARECHILDREN      = 4      
 
 # 
 # Child process is restarted after handling this many connections.
 #
-MAXCONNECTS	= 10000       
+MAXCONNECTS           = 10000       
 
 # 
 # Child process will restart after this many connection errors.
 #
-MAX_ERRORS	= 500          
+MAX_ERRORS            = 500          
 
 # 
 # Idle time allowed before a connection is shut off.
 #
-TIMEOUT		= 300             
+TIMEOUT               = 300             
 
 # 
 # If yes, resolves IP addresses to DNS names when logging.
 #
-RESOLVE_IP	= yes          
+RESOLVE_IP            = no
 
 # 
 # logfile for stdout messages
 #
-logfile		= /var/log/dbmail.log	
+logfile               = /var/log/dbmail.log        
 
 # 
 # logfile for stderr messages
 #
-errorlog	= /var/log/dbmail.err	
+errorlog              = /var/log/dbmail.err        
 
 # 
 # directory for storing PID files
 #
-pid_directory	= /var/run
+pid_directory         = /var/run
 
 #
 # directory for storing the daemon statefiles
 #
-state_directory	= /var/run
+state_directory       = /var/run
 
 [SMTP]
 # In fact, there isn't anything here by default.
@@ -174,127 +180,127 @@ state_directory	= /var/run
 # 
 # Port to bind to.
 #
-PORT		= 24                 
+PORT                  = 24                 
 
 [POP]
 # 
 # Port to bind to.
 #
-PORT		= 110                
+PORT                  = 110                
 
 # 
 # If yes, allows SMTP access from the host IP connecting by POP3.
 # This requires addition configuration of your MTA
 #
-POP_BEFORE_SMTP	= no      
+POP_BEFORE_SMTP       = no      
 
 [IMAP]
 
 # 
 # Port to bind to.
 #
-PORT		= 143                
+PORT                  = 143                
 
 # 
 # IMAP prefers a longer timeout than other services.
 #
-TIMEOUT		= 4000            
+TIMEOUT               = 4000            
 
 # 
 # If yes, allows SMTP access from the host IP connecting by IMAP.
 # This requires addition configuration of your MTA
 #
-IMAP_BEFORE_SMTP	= no     
+IMAP_BEFORE_SMTP      = no     
 
 [SIEVE]
 # 
 # Port to bind to.
 #
-PORT		= 20000               
+PORT                  = 20000               
 
 [LDAP]
-PORT		= 389
-VERSION		= 3
-HOSTNAME	= ldap
-BASE_DN		= ou=People,dc=mydomain,dc=com
+PORT                  = 389
+VERSION               = 3
+HOSTNAME              = ldap
+BASE_DN               = ou=People,dc=mydomain,dc=com
 
 # 
 # If your LDAP library supports ldap_initialize(), then you can use the
 # alternative LDAP server DSN like following.
 #
-# URI		= ldap://127.0.0.1:389
-# URI		= ldapi://%2fvar%2frun%2fopenldap%2fldapi/
+# URI                = ldap://127.0.0.1:389
+# URI                = ldapi://%2fvar%2frun%2fopenldap%2fldapi/
 
 # 
 # Leave blank for anonymous bind.
 # example: cn=admin,dc=mydomain,dc=com     
 #
-BIND_DN		= 
+BIND_DN               = 
 
 # 
 # Leave blank for anonymous bind.
 #
-BIND_PW		= 
-SCOPE		= SubTree
-USER_OBJECTCLASS	= top,account,dbmailUser
-FORW_OBJECTCLASS	= top,account,dbmailForwardingAddress
-CN_STRING	= uid
-FIELD_PASSWD	= userPassword
-FIELD_UID	= uid
-FIELD_NID	= uidNumber
-MIN_NID		= 10000
-MAX_NID		= 15000
-FIELD_CID	= gidNumber
-MIN_CID		= 10000
-MAX_CID		= 15000
-FIELD_MAIL	= mail
-FIELD_QUOTA	= mailQuota
-FIELD_FWDTARGET	= mailForwardingAddress
+BIND_PW               = 
+SCOPE                 = SubTree
+USER_OBJECTCLASS      = top,account,dbmailUser
+FORW_OBJECTCLASS      = top,account,dbmailForwardingAddress
+CN_STRING             = uid
+FIELD_PASSWD          = userPassword
+FIELD_UID             = uid
+FIELD_NID             = uidNumber
+MIN_NID               = 10000
+MAX_NID               = 15000
+FIELD_CID             = gidNumber
+MIN_CID               = 10000
+MAX_CID               = 15000
+FIELD_MAIL            = mail
+FIELD_QUOTA           = mailQuota
+FIELD_FWDTARGET       = mailForwardingAddress
 
 [DELIVERY]
 # 
 # Run Sieve scripts as messages are delivered.
 #
-SIEVE		= yes               
+SIEVE                 = yes               
 
 # 
 # Use 'user+mailbox@domain' format to deliver to a mailbox.
 #
-SUBADDRESS	= yes          
+SUBADDRESS            = yes          
 
 # 
 # Turn on/off the Sieve Vacation extension.
 #
-SIEVE_VACATION	= yes      
+SIEVE_VACATION        = yes      
 
 # 
 # Turn on/off the Sieve Notify extension
 #
-SIEVE_NOTIFY	= yes
+SIEVE_NOTIFY          = yes
 
 # 
 # Turn on/off additional Sieve debugging.
 #
-SIEVE_DEBUG	= no          
+SIEVE_DEBUG           = no          
 
 # 
 # Use the auto_notify table to send email notifications.
 #
-AUTO_NOTIFY	= no          
+AUTO_NOTIFY           = no          
 
 # 
 # Use the auto_reply table to send away messages.
 #
-AUTO_REPLY	= no           
+AUTO_REPLY            = no           
 # 
 # Defaults to "NEW MAIL NOTIFICATION"
 #
-#AUTO_NOTIFY_SUBJECT	=    
+#AUTO_NOTIFY_SUBJECT        =    
 
 # 
 # Defaults to POSTMASTER from the DBMAIL section.
 #
-#AUTO_NOTIFY_SENDER	=   
+#AUTO_NOTIFY_SENDER        =   
 
 
 
